contacts list rendered